--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,39 @@
 /pkg/
 /spec/reports/
 /tmp/
+
+/bin/bayes.rb
+/bin/cdiff
+/bin/coderay
+/bin/colortab
+/bin/coveralls
+/bin/decolor
+/bin/htmldiff
+/bin/kramdown
+/bin/ldiff
+/bin/listen
+/bin/nokogiri
+/bin/posix-spawn-benchmark
+/bin/racc
+/bin/redcarpet
+/bin/restclient
+/bin/reverse_markdown
+/bin/rougify
+/bin/ruby-parse
+/bin/ruby-rewrite
+/bin/safe_yaml
+/bin/sass
+/bin/sass-convert
+/bin/scss
+/bin/summarize.rb
+/bin/term_cdiff
+/bin/term_colortab
+/bin/term_decolor
+/bin/term_display
+/bin/term_mandel
+/bin/term_snow
+/bin/thor
+/bin/tilt
+/bin/yard
+/bin/yardoc
+/bin/yri
